--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,11 @@
             <version>9.3.0.M0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
     </dependencies>
 </project>
