--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,11 @@
             <version>2.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
+        </dependency>
+
     </dependencies>
 </project>
